--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -15,7 +15,7 @@
       <ion-col col-12 *ngFor="let ca of cart">
         <ion-card>
           <div style="display: flex;flex-direction: row;justify-content: space-between;align-items: center">
-            <img style="padding: 8px;width: 100px;height: 100px;" src="http://localhost:3000/images/{{ ca.images[0] }}">
+            <img style="padding: 8px;width: 100px;height: 100px;" src="https://seeshoe-server.herokuapp.com/images/{{ ca.images[0] }}">
             <div
               style="padding: 8px 16px;display: flex;align-items: flex-start;flex-direction: column;justify-content: center;flex-grow: 1">
               <h1>{{ ca.name }}</h1>
